This Time I Made Correction In Second Commit Lines and add new line

--- a/First1.html
+++ b/First1.html
@@ -9,10 +9,12 @@
     <h1>Today I Try My First Git Commit</h1>
     <p>Tesing 1</p>
 
-    <h2>This Time I Try For Second Time To Commit</h2>
-    <p>Seond Commit</p>
+    <h2>This Time I Try For Second Time</h2>
+    <p>Second Commit</p>
     <br>
     
     <h3>This Is Third attempt</h3>
+
+    <P>Now This Time I Make Correction</P>
 </body>
 </html>
